fixed bug where about and contact sections on home page did not stretch full screen on wide screens

--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -109,5 +109,5 @@
   background-color: rgba(50, 50, 50, .5);
   padding: 10px;
   border-radius: 5px;
-  max-width: 1000px;
+  margin: 10px 10%;
 }
